switch to 'asset-packagist.org'

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,14 @@
     "require": {
         "yiisoft/yii2": "*"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "autoload": {
-        "psr-4": { "yii2tech\\config\\": "" }
+        "psr-4": {"yii2tech\\config\\": ""}
     },
     "extra": {
         "branch-alias": {
