--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,13 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "2.1.x-dev"
     },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
-        }
-    ],
     "autoload": {
         "psr-4": {"yii2tech\\config\\": "src"}
+    },
+    "autoload-dev": {
+        "psr-4": {"yii2tech\\tests\\unit\\config\\": "tests"}
     },
     "extra": {
         "branch-alias": {
